--- a/form.css
+++ b/form.css
@@ -47,9 +47,42 @@
 form{
     width: 60%;
     margin: 0 auto;
+    margin-top: 50px;
 }
 .form{
   display: flex;  
   flex-direction: column;
+  row-gap:30px ;
+
+}
+input{
+    border: 0;
+    border-bottom: 1px solid #144E49;
+    font-size: 23px;
+}
+::placeholder{
+    color: #144E49;
+}
+button{
+    background-color: #144E49;
+    color: white;
+    padding: 10px 0;
+    border: 0;
+    border-radius: 10px;
+}
+.nav-login{
+    color:#144E49;
+    text-align: center;
+    margin-top: 30px;
+    
+}
+.nav-login>a{
+    color: #144E49;
+    font-weight: 700;
+}
+.language{
+   
+    float: right;
+    cursor:pointer ;
 
 }
